# xml-processing

./: LICENSE  README.md
haskell/: README.md
haskell/package-hxt/: README.md  package-hxt.cabal
haskell/package-hxt/src/: Exercise1.hs  Main.hs  Pickle.hs  Util.hs
haskell/package-xml/: README.md  package-xml.cabal
haskell/package-xml-conduit/: README.md  package-xml-conduit.cabal
haskell/package-xml-conduit-dom/: README.md  package-xml-conduit.cabal
haskell/package-xml-conduit-dom/src/: Exercise1Simple.hs  Exercise4.hs  Exercise8.hs
haskell/package-xml-conduit-stream/: README.md  package-xml-conduit-stream.cabal
haskell/package-xml-conduit-stream/app/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Main.hs
haskell/package-xml-conduit/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise5.hs  Exercise7.hs  GtrDc.hs  Main.hs
haskell/package-xml/src/: Common.hs  Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise7.hs  Exercise8.hs  Main.hs  exercise-1.hs  exercise-2.hs  exercise-3.hs
python/: README.md  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py  exercise8.py
shell/: README.md
xml/: example.xml  gtr_dc.xsd
xslt/: README.md  exercise-1.xsl  exercise-2.xsl  exercise-3.xsl  exercise-4.xsl  exercise-5.xsl  exercise-7.xsl  exercise-8.xsl
