cabal-version:      3.0
name:               package-xml-conduit-stream
version:            0.1.0.0
license:            BSD-3-Clause
author:             Martin Hoppenheit
maintainer:         martin@hoppenheit.info
build-type:         Simple
extra-source-files: README.md

common warnings
    ghc-options: -Wall

executable exercise
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    base >= 4.17 && < 5,
                      conduit ^>= 1.3,
                      text ^>= 2.0,
                      xml-conduit ^>= 1.9,
                      xml-types ^>= 0.3
    hs-source-dirs:   app
    default-language: GHC2021
    other-modules:    Exercise1
