name:                package-xml
version:             0.0.1
-- synopsis:
-- description:
license:             BSD3
author:              Martin Hoppenheit
maintainer:          martin@hoppenheit.info
copyright:           2018 Martin Hoppenheit
category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable exercise-1
  hs-source-dirs:      src
  main-is:             exercise-1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xml

executable exercise-2
  hs-source-dirs:      src
  main-is:             exercise-2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xml
