name:                package-xml
version:             0.0.1
-- synopsis:
-- description:
license:             BSD3
author:              Martin Hoppenheit
maintainer:          martin@hoppenheit.info
copyright:           2018 Martin Hoppenheit
category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable exercise
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xml
  other-modules:       Common
                     , Exercise1
                     , Exercise2
                     , Exercise3
                     , Exercise4
                     , Exercise5
                     , Exercise7
